Changes made to API defination and code
